# misc-docs

./: 2017-12-05-proxy-settings-in-nginx.md  2017-12-28-write-enable-dlock-with-spring-aop.md  2019-04-24-automate-memory-management-the-rust-way.md  2019-05-11-leetcode-sort-list-in-rust.md  Cargo.toml  README.md  build.rs
docs/: 2017-10-24-Rust-in-Docker.md  2017-11-06-atc-in-rust.md  2017-11-06-iterator-in-rust.md  2017-12-05-proxy-settings-in-nginx.md  2018-01-11-setup-local-k8s-dev-env.md  2019-07-16-exec-in-docker-entry-point.md  2019-07-24-build-sonic-on-centos-7.md  2020-05-05-about-spring-framework.md  2020-05-05-patterns-in-spring-framework.md
docs/draft/: application-context-finish-bean-factory-intialization.groovy  application-context-invoke-bean-factory-post-processor.groovy  application-context-register-bean-post-processor.groovy  spring-application-create-context.groovy  spring-application-prepare-context.groovy  spring-application-prepare-environment.groovy  spring-application-refresh-context.groovy  spring-application-run-sequence.groovy  spring-boot-sequence.groovy  tmp.md
