[package]
name = "misc-docs"
version = "0.1.0"
authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
edition = "2018"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "misc_docs"

[[bin]]
name = "misc-docs-server"
path = "src/bin/server.rs"

[dependencies]
actix-web = "1.0"
actix-files = "0.1.3"

[build-dependencies]
comrak = "0.6"

